--- a/Index.html
+++ b/Index.html
@@ -124,11 +124,48 @@
    <main class="container" id="content">
 
         <p id="title">Dashboard</p>
+        
+        <article class="cards-section">
+            <div class="card">
+                <p>Title</p>
+                <p>Subtitle</p>
+            </div>
 
-        <div class="card">
-            <p>Title</p>
-            <p>Subtitle</p>
-        </div>
+            <div class="card">
+                <p>Title</p>
+                <p>Subtitle</p>
+            </div>
+
+            <div class="card">
+                <p>Title</p>
+                <p>Subtitle</p>
+            </div>
+
+            <div class="card">
+                <p>Title</p>
+                <p>Subtitle</p>
+            </div>
+
+            <div class="card">
+                <p>Title</p>
+                <p>Subtitle</p>
+            </div>
+
+            <div class="card">
+                <p>Title</p>
+                <p>Subtitle</p>
+            </div>
+
+            <div class="card">
+                <p>Title</p>
+                <p>Subtitle</p>
+            </div>
+
+            <div class="card">
+                <p>Title</p>
+                <p>Subtitle</p>
+            </div>
+        </article>
 
    </main>
 
